// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email with confirmation render a email input and confirmation 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation for B2B 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Work email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation for B2B 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Work email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with default description 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with default description 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with default value 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value="some@email.com"
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with default value 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value="some@email.com"
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with disabled fields 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         disabled
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with disabled fields 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         disabled
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with email confirmation error 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with email confirmation error 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with email error 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with email error 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
<div id="emailConfirmField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="emailConfirm"
         class="o-forms__label"
  >
    Confirm email address
  </label>
  <input type="email"
         id="emailConfirm"
         name="emailConfirm"
         placeholder="Confirm your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-emailConfirm"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    This email address does not match
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with given description 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    some description
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with given description 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    some description
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with read only fields 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value o-forms__field-disabled"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input and confirmation with read only fields 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value o-forms__field-disabled"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input and no confirmation 1`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;

exports[`Email with confirmation render a email input and no confirmation 2`] = `
<div id="emailField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-validate="required,email"
>
  <label for="email"
         class="o-forms__label"
  >
    Email address
  </label>
  <small id="email-description"
         class="o-forms__additional-info"
  >
    Please enter an email address
  </small>
  <input type="email"
         id="email"
         name="email"
         placeholder="Enter your email address"
         autocomplete="email"
         class="no-mouseflow o-forms__text js-field__input js-item__value"
         data-trackable="field-email"
         aria-required="true"
         required
         aria-describedby="email-description"
         value
  >
  <div class="o-forms__errortext">
    This email address is not valid
  </div>
</div>
`;
